# little

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
doc/: api.md  example.md  lt.md  ltstd.md
scripts/: demo.little  module.little
src/: little.c  little.h  little_std.c  little_std.h
